When space key is pressed, move the car every 16 milliseconds #3

--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,21 @@
   padding: 0;
 }
 
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   background-color: #525351;
   margin-top: 5%;
+  margin-left: 1%;
 }
 
 img {
   max-width: 20%;
   height: auto;
+  position: absolute;
   transform: rotate(180deg);
 }
